Fix z-index of timeline error message

--- a/src/styles/_Timeline.scss
+++ b/src/styles/_Timeline.scss
@@ -8,10 +8,11 @@
 }
 
 .Tweets-error {
-  position: absolute;
+  position: fixed;
   top: 5px;
   left: 5px;
   width: calc(100% - 10px);
+  z-index: 5;
   text-align: center;
   color: $brand-danger;
   padding: .5em;
